# Gmail-MCP

./: .gitignore  README.md  auth.py  cli.py  db.py  gmail_client.py  pyproject.toml  server.py
